--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,25 +36,10 @@ jobs:
         php-versions: [ '8.2','8.1' ]
         dependency-stability: [ 'prefer-none' ]
 
-    name: P${{ matrix.php-versions }} - L${{ matrix.laravel }} - ${{ matrix.dependency-stability }} - ${{ matrix.operating-system}}
+    name: P${{ matrix.php-versions }} - ${{ matrix.dependency-stability }} - ${{ matrix.operating-system}}
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
-    - name: Cache node_modules directory
-      uses: actions/cache@v3
-      id: node_modules-cache
-      with:
-        path: node_modules
-        key: ${{ runner.OS }}-build-${{ hashFiles('**/package.json') }}-${{ hashFiles('**/package-lock.json') }}
-    - name: Install NPM packages
-      if: steps.node_modules-cache.outputs.cache-hit != 'true'
-      run: npm ci
-    - name: Build frontend
-      run: npm run build
     - name: Install PHP versions
       uses: shivammathur/setup-php@v2
       with:
@@ -94,7 +79,6 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
     - name: Run Migrations
-# Set environment
       env:
         DB_CONNECTION: mysql
         DB_DATABASE: transmission
@@ -108,9 +92,23 @@ jobs:
     - name: PHP Version
       run: php --version
 
-# Code quality
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18.x'
+    - name: Cache node_modules directory
+      uses: actions/cache@v3
+      id: node_modules-cache
+      with:
+        path: node_modules
+        key: ${{ runner.OS }}-build-${{ hashFiles('**/package.json') }}-${{ hashFiles('**/package-lock.json') }}
+    - name: Install NPM packages
+      if: steps.node_modules-cache.outputs.cache-hit != 'true'
+      run: npm ci
+    - name: Build frontend
+      run: npm run build
+
     - name: Execute tests (Unit and Feature tests) via PHPUnit
-# Set environment
       env:
         DB_CONNECTION: mysql
         DB_DATABASE: transmission
