--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
       env:
         DB_CONNECTION: mysql
         DB_DATABASE: testing
-        DB_HOST: mysql
+        DB_HOST: 127.0.0.1
         DB_PORT: 33306
         DB_USER: root
 
@@ -112,7 +112,7 @@ jobs:
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: mysql
-        DB_HOST: mysql
+        DB_HOST: 127.0.0.1
         DB_DATABASE: testing
         DB_PORT: 33306
         DB_USER: root
