--- a/vercel.json
+++ b/vercel.json
@@ -24,7 +24,7 @@
         "APP_NAME": "Transmission",
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://transmission-6foyn7set-thavarshan.vercel.app",
+        "APP_URL": "https://transmission-ashen.vercel.app",
         "VERCEL_DEMO_MODE": "true",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
