--- a/vercel.json
+++ b/vercel.json
@@ -22,8 +22,8 @@
     ],
     "env": {
         "APP_NAME": "Transmission",
-        "APP_ENV": "production",
-        "APP_DEBUG": "false",
+        "APP_ENV": "local",
+        "APP_DEBUG": "true",
         "APP_URL": "https://transmission-ashen.vercel.app",
         "VERCEL_DEMO_MODE": "true",
         "APP_CONFIG_CACHE": "/tmp/config.php",
