--- a/fly.toml
+++ b/fly.toml
@@ -14,12 +14,17 @@ console_command = "php /var/www/html/artisan tinker"
 
 [env]
   APP_NAME = "transmission"
-  APP_ENV = "local"
-  APP_DEBUG = "false"
+  APP_ENV = "production"
   APP_URL = "https://transmission.fly.dev"
   LOG_CHANNEL = "stderr"
   LOG_LEVEL = "info"
   LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
+  DB_CONNECTION = "mysql"
+  DB_HOST = "aws.connect.psdb.cloud"
+  DB_PORT = 3306
+  DB_DATABASE = "transmission"
+  DB_USERNAME = "unu21hzvm5u1r83qmqey"
+  MYSQL_ATTR_SSL_CA = "/etc/ssl/cert.pem"
   SESSION_DRIVER = "cookie"
   SESSION_SECURE_COOKIE = "true"
 
