--- a/fly.toml
+++ b/fly.toml
@@ -23,8 +23,7 @@ console_command = "php /var/www/html/artisan tinker"
   DB_HOST = "aws.connect.psdb.cloud"
   DB_PORT = 3306
   DB_DATABASE = "transmission"
-  DB_USERNAME = "unu21hzvm5u1r83qmqey"
-  MYSQL_ATTR_SSL_CA = "/etc/ssl/cert.pem"
+  MYSQL_ATTR_SSL_CA="/etc/ssl/certs/ca-certificates.crt"
   SESSION_DRIVER = "cookie"
   SESSION_SECURE_COOKIE = "true"
 
