--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,13 @@ on:
       - main
       - development
       - features/**
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
-# Service container Mysql mysql
+    # Service container Mysql mysql
     services:
       # Label used to access the service container
       mysql:
@@ -19,7 +21,7 @@ jobs:
         image: mysql:latest
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          MYSQL_DATABASE:  testing
+          MYSQL_DATABASE: testing
         ## map the "external" 33306 port with the "internal" 3306
         ports:
           - 33306:3306
@@ -33,88 +35,88 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: [ '8.2','8.1' ]
-        dependency-stability: [ 'prefer-none' ]
+        php-versions: ['8.2', '8.1']
+        dependency-stability: ['prefer-none']
 
     name: P${{ matrix.php-versions }} - ${{ matrix.dependency-stability }} - ${{ matrix.operating-system}}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Install PHP versions
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php-versions }}
-    - name: Get Composer Cache Directory 2
-      id: composer-cache
-      run: |
-        echo "::set-output name=dir::$(composer config cache-files-dir)"
-    - uses: actions/cache@v3
-      id: actions-cache
-      with:
-        path: ${{ steps.composer-cache.outputs.dir }}
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-composer-
-    - name: Cache PHP dependencies
-      uses: actions/cache@v3
-      id: vendor-cache
-      with:
-        path: vendor
-        key: ${{ runner.OS }}-build-${{ hashFiles('**/composer.lock') }}
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      if: steps.vendor-cache.outputs.cache-hit != 'true'
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      - uses: actions/checkout@v3
+      - name: Install PHP versions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+      - name: Get Composer Cache Directory 2
+        id: composer-cache
+        run: |
+          echo "::set-output name=dir::$(composer config cache-files-dir)"
+      - uses: actions/cache@v3
+        id: actions-cache
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+      - name: Cache PHP dependencies
+        uses: actions/cache@v3
+        id: vendor-cache
+        with:
+          path: vendor
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/composer.lock') }}
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install Dependencies
+        if: steps.vendor-cache.outputs.cache-hit != 'true'
+        run: composer install -n --prefer-dist
 
-    - name: Update Dependencies with latest stable
-      if: matrix.dependency-stability == 'prefer-stable'
-      run: composer update --prefer-stable
-    - name: Update Dependencies with lowest stable
-      if: matrix.dependency-stability == 'prefer-lowest'
-      run: composer update --prefer-stable --prefer-lowest
+      - name: Update Dependencies with latest stable
+        if: matrix.dependency-stability == 'prefer-stable'
+        run: composer update --prefer-stable
+      - name: Update Dependencies with lowest stable
+        if: matrix.dependency-stability == 'prefer-lowest'
+        run: composer update --prefer-stable --prefer-lowest
 
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Run Migrations
-      env:
-        DB_CONNECTION: mysql
-        DB_DATABASE: testing
-        DB_HOST: 127.0.0.1
-        DB_PORT: 33306
-        DB_USER: root
+      - name: Generate key
+        run: php artisan key:generate
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: Run Migrations
+        env:
+          DB_CONNECTION: mysql
+          DB_DATABASE: testing
+          DB_HOST: 127.0.0.1
+          DB_PORT: 33306
+          DB_USER: root
 
-      run: php artisan migrate
+        run: php artisan migrate
 
-    - name: Show dir
-      run: pwd
-    - name: PHP Version
-      run: php --version
+      - name: Show dir
+        run: pwd
+      - name: PHP Version
+        run: php --version
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
-    - name: Cache node_modules directory
-      uses: actions/cache@v3
-      id: node_modules-cache
-      with:
-        path: node_modules
-        key: ${{ runner.OS }}-build-${{ hashFiles('**/package.json') }}-${{ hashFiles('**/package-lock.json') }}
-    - name: Install NPM packages
-      if: steps.node_modules-cache.outputs.cache-hit != 'true'
-      run: npm ci
-    - name: Build frontend
-      run: npm run build
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+      - name: Cache node_modules directory
+        uses: actions/cache@v3
+        id: node_modules-cache
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package.json') }}-${{ hashFiles('**/package-lock.json') }}
+      - name: Install NPM packages
+        if: steps.node_modules-cache.outputs.cache-hit != 'true'
+        run: npm ci
+      - name: Build frontend
+        run: npm run build
 
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_DATABASE: testing
-        DB_PORT: 33306
-        DB_USER: root
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_DATABASE: testing
+          DB_PORT: 33306
+          DB_USER: root
 
-      run: vendor/bin/phpunit --testdox
+        run: vendor/bin/phpunit --testdox
